--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Decision Engine Pro</title>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -48,7 +48,7 @@ margin-bottom:20px;
 }
 
 .hero h1{
-font-size:64px;
+font-size:60px;
 font-weight:700;
 line-height:1.05;
 background:linear-gradient(90deg,#ffffff,#d4d4d4,#888);
@@ -70,26 +70,6 @@ border-radius:22px;
 width:100%;
 max-width:650px;
 box-shadow:0 40px 120px rgba(0,0,0,.9);
-}
-
-.card-header{
-display:flex;
-align-items:center;
-gap:12px;
-margin-bottom:24px;
-font-weight:600;
-font-size:18px;
-}
-
-.icon{
-width:38px;
-height:38px;
-background:#151515;
-border:1px solid #222;
-border-radius:10px;
-display:flex;
-align-items:center;
-justify-content:center;
 }
 
 .label{
@@ -122,10 +102,7 @@ font-size:13px;
 border-bottom:1px solid #1a1a1a;
 }
 
-.value{
-font-weight:600;
-}
-
+.value{font-weight:600;}
 .green{color:#22c55e;}
 .red{color:#ef4444;}
 .yellow{color:#facc15;}
@@ -166,26 +143,21 @@ border-radius:12px;
 
 <div class="card">
 
-<div class="card-header">
-<div class="icon">📊</div>
-<span id="cardTitle">Expected Value Calculator</span>
-</div>
+<div class="label" id="pLabel">Probability (0~1)</div>
+<input type="number" id="p" step="0.01" value="0.5">
 
-<div class="label">Probability (0~1)</div>
-<input type="number" id="p" step="0.01">
+<div class="label" id="rLabel">Reward</div>
+<input type="number" id="r" value="100">
 
-<div class="label">Reward</div>
-<input type="number" id="r">
+<div class="label" id="cLabel">Cost</div>
+<input type="number" id="c" value="50">
 
-<div class="label">Cost</div>
-<input type="number" id="c">
-
-<div class="result"><span>Expected Value</span><span class="value gray" id="ev">-</span></div>
+<div class="result"><span id="evText">Expected Value</span><span class="value gray" id="ev">-</span></div>
 <div class="result"><span>ROI</span><span class="value gray" id="roi">-</span></div>
 <div class="result"><span>Kelly %</span><span class="value gray" id="kelly">-</span></div>
-<div class="result"><span>Risk Level</span><span class="value gray" id="risk">-</span></div>
+<div class="result"><span id="riskText">Risk Level</span><span class="value gray" id="risk">-</span></div>
 
-<button onclick="simulate()">Simulate 100 Runs</button>
+<button onclick="simulate()" id="simBtn">Simulate 100 Runs</button>
 
 <div class="chart-container">
 <canvas id="capitalChart"></canvas>
@@ -194,7 +166,20 @@ border-radius:12px;
 </div>
 
 <script>
+let zh=false;
 let chart;
+
+function toggleLang(){
+zh=!zh;
+title.innerText=zh?"做出精準決策":"Make calculated decisions.";
+subtitle.innerText=zh?"在投入資金前先評估長期結果":"Evaluate long-term outcomes before risking capital.";
+pLabel.innerText=zh?"機率 (0~1)":"Probability (0~1)";
+rLabel.innerText=zh?"獎勵":"Reward";
+cLabel.innerText=zh?"成本":"Cost";
+evText.innerText=zh?"期望值":"Expected Value";
+riskText.innerText=zh?"風險等級":"Risk Level";
+simBtn.innerText=zh?"模擬 100 次":"Simulate 100 Runs";
+}
 
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
@@ -213,8 +198,8 @@ update("ev",ev);
 update("roi",roi.toFixed(2)+"%");
 update("kelly",k.toFixed(2)+"%");
 
-if(ev>0) updateText("risk","Low Risk","green");
-else updateText("risk","High Risk","red");
+if(ev>0) updateText("risk","Low","green");
+else updateText("risk","High","red");
 }
 
 function simulate(){
@@ -225,15 +210,27 @@ if(isNaN(p)||isNaN(r)||isNaN(c)) return;
 
 let capital=0;
 let data=[0];
+let peak=0;
+let maxDD=0;
 
 for(let i=0;i<100;i++){
 if(Math.random()<p) capital+=r-c;
 else capital-=c;
+
+peak=Math.max(peak,capital);
+maxDD=Math.min(maxDD,capital-peak);
 data.push(capital);
 }
 
-if(chart) chart.destroy();
+drawChart(data);
 
+if(maxDD<-c*5) updateText("risk","High","red");
+else if(maxDD<-c*2) updateText("risk","Medium","yellow");
+else updateText("risk","Low","green");
+}
+
+function drawChart(data){
+if(chart) chart.destroy();
 chart=new Chart(document.getElementById("capitalChart"),{
 type:'line',
 data:{
@@ -242,7 +239,7 @@ datasets:[{
 data:data,
 borderColor:'#22c55e',
 borderWidth:2,
-tension:0.3
+tension:0.25
 }]
 },
 options:{
@@ -269,6 +266,9 @@ let el=document.getElementById(id);
 el.innerText=text;
 el.className="value "+color;
 }
+
+calculate();
+simulate();   // 進頁面就有基本曲線
 </script>
 
 </body>
