--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 
 body{
 font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",sans-serif;
-background:linear-gradient(180deg,#050505,#0e0e0e);
+background:
+radial-gradient(circle at 20% 20%, #1a1a1a 0%, transparent 40%),
+radial-gradient(circle at 80% 80%, #111 0%, transparent 50%),
+linear-gradient(180deg,#050505,#0e0e0e);
 color:#e5e7eb;
 min-height:100vh;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:70px 20px;
+padding:80px 20px;
 }
 
+/* Language */
 .lang{
 position:absolute;
 top:25px;
@@ -27,28 +31,66 @@ color:#888;
 cursor:pointer;
 }
 
-.hero{text-align:center;margin-bottom:40px;}
+/* HERO */
+.hero{
+text-align:center;
+margin-bottom:45px;
+}
+
+.badge{
+display:inline-block;
+padding:6px 16px;
+border-radius:999px;
+font-size:11px;
+background:#111;
+border:1px solid #222;
+color:#aaa;
+margin-bottom:18px;
+letter-spacing:1px;
+}
 
 .hero h1{
-font-size:42px;
+font-size:50px;
 font-weight:700;
 background:linear-gradient(90deg,#fff,#bbb,#777);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
-.hero p{margin-top:10px;color:#777;font-size:14px;}
+.hero p{
+margin-top:12px;
+color:#888;
+font-size:14px;
+}
 
+/* CARD */
 .card{
 background:#0c0c0c;
 border:1px solid #1f1f1f;
-padding:25px;
-border-radius:18px;
+padding:30px;
+border-radius:20px;
 width:100%;
-max-width:600px;
+max-width:650px;
+box-shadow:0 40px 120px rgba(0,0,0,.9);
 }
 
-.label{font-size:12px;color:#777;margin:8px 0;}
+.icon{
+width:34px;
+height:34px;
+background:#151515;
+border:1px solid #222;
+border-radius:8px;
+display:flex;
+align-items:center;
+justify-content:center;
+margin-bottom:15px;
+}
+
+.label{
+font-size:12px;
+color:#777;
+margin-bottom:6px;
+}
 
 input{
 width:100%;
@@ -57,7 +99,7 @@ border-radius:10px;
 border:1px solid #222;
 background:#111;
 color:white;
-margin-bottom:10px;
+margin-bottom:14px;
 }
 
 .result{
@@ -75,7 +117,7 @@ border-bottom:1px solid #1a1a1a;
 .gray{color:#9ca3af;}
 
 button{
-margin-top:15px;
+margin-top:18px;
 width:100%;
 padding:12px;
 border-radius:10px;
@@ -93,36 +135,43 @@ cursor:pointer;
 <div class="lang" onclick="toggleLang()">中文 / English</div>
 
 <div class="hero">
-<h1 id="title">Decision Engine</h1>
+<div class="badge" id="badge">Advanced Expected Value Engine</div>
+<h1 id="title">Make calculated decisions.</h1>
 <p id="subtitle">Evaluate long-term edge before risking capital.</p>
 </div>
 
 <div class="card">
 
+<div class="icon">
+<svg width="18" height="18" stroke="#aaa" fill="none" viewBox="0 0 24 24">
+<rect x="4" y="3" width="16" height="18" rx="2"/>
+<line x1="8" y1="8" x2="16" y2="8"/>
+<line x1="8" y1="12" x2="12" y2="12"/>
+<line x1="8" y1="16" x2="12" y2="16"/>
+</svg>
+</div>
+
 <div class="label" id="pLabel">Probability (0~1)</div>
-<input type="number" id="p" step="0.01">
+<input type="number" id="prob" step="0.01">
 
 <div class="label" id="rLabel">Reward</div>
-<input type="number" id="r">
+<input type="number" id="reward">
 
 <div class="label" id="cLabel">Cost</div>
-<input type="number" id="c">
+<input type="number" id="cost">
 
-<div class="label">Bankroll (optional)</div>
+<div class="label" id="bLabel">Bankroll (optional)</div>
 <input type="number" id="bank">
 
 <div class="result"><span id="evText">Expected Value</span><span class="value gray" id="ev">-</span></div>
 <div class="result"><span>ROI</span><span class="value gray" id="roi">-</span></div>
 <div class="result"><span id="beText">Break-even</span><span class="value gray" id="be">-</span></div>
 <div class="result"><span id="kellyText">Kelly %</span><span class="value gray" id="kelly">-</span></div>
-<div class="result"><span>Half Kelly</span><span class="value gray" id="half">-</span></div>
 <div class="result"><span id="worthText">Worth</span><span class="value gray" id="worth">-</span></div>
-<div class="result"><span id="riskText">Risk</span><span class="value gray" id="risk">-</span></div>
+<div class="result"><span id="riskText">Risk Level</span><span class="value gray" id="risk">-</span></div>
+<div class="result"><span id="simText">Simulation Profit</span><span class="value gray" id="simProfit">-</span></div>
 
-<div class="result"><span id="simProfitText">Sim Profit (100)</span><span class="value gray" id="simProfit">-</span></div>
-<div class="result"><span id="simDDText">Max Drawdown</span><span class="value gray" id="simDD">-</span></div>
-
-<button onclick="simulate()">Simulate 100 Runs</button>
+<button onclick="simulate()" id="simBtn">Simulate 100 Runs</button>
 
 </div>
 
@@ -131,29 +180,36 @@ let zh=false;
 
 function toggleLang(){
 zh=!zh;
-title.innerText=zh?"決策引擎":"Decision Engine";
-subtitle.innerText=zh?"在投入資金前先評估長期優勢":"Evaluate long-term edge before risking capital.";
-pLabel.innerText=zh?"機率 (0~1)":"Probability (0~1)";
-rLabel.innerText=zh?"獎勵":"Reward";
-cLabel.innerText=zh?"成本":"Cost";
-evText.innerText=zh?"期望值":"Expected Value";
-beText.innerText=zh?"損益平衡":"Break-even";
-kellyText.innerText=zh?"Kelly 比例":"Kelly %";
-worthText.innerText=zh?"價值判斷":"Worth";
-riskText.innerText=zh?"風險等級":"Risk";
-simProfitText.innerText=zh?"模擬總盈虧":"Sim Profit (100)";
-simDDText.innerText=zh?"最大回撤":"Max Drawdown";
+
+document.getElementById("badge").innerText=zh?"進階期望值引擎":"Advanced Expected Value Engine";
+document.getElementById("title").innerText=zh?"做出精準決策":"Make calculated decisions.";
+document.getElementById("subtitle").innerText=zh?"在投入資金前先評估長期優勢":"Evaluate long-term edge before risking capital.";
+document.getElementById("pLabel").innerText=zh?"機率 (0~1)":"Probability (0~1)";
+document.getElementById("rLabel").innerText=zh?"獎勵":"Reward";
+document.getElementById("cLabel").innerText=zh?"成本":"Cost";
+document.getElementById("bLabel").innerText=zh?"總資金 (選填)":"Bankroll (optional)";
+document.getElementById("evText").innerText=zh?"期望值":"Expected Value";
+document.getElementById("beText").innerText=zh?"損益平衡":"Break-even";
+document.getElementById("kellyText").innerText=zh?"Kelly 比例":"Kelly %";
+document.getElementById("worthText").innerText=zh?"價值判斷":"Worth";
+document.getElementById("riskText").innerText=zh?"風險等級":"Risk Level";
+document.getElementById("simText").innerText=zh?"模擬盈虧":"Simulation Profit";
+document.getElementById("simBtn").innerText=zh?"模擬 100 次":"Simulate 100 Runs";
 }
 
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
 function calculate(){
-let p=parseFloat(p.value);
-let r=parseFloat(r.value);
-let c=parseFloat(c.value);
-let bank=parseFloat(bank.value);
 
-if(isNaN(p)||isNaN(r)||isNaN(c)){reset();return;}
+let p=parseFloat(document.getElementById("prob").value);
+let r=parseFloat(document.getElementById("reward").value);
+let c=parseFloat(document.getElementById("cost").value);
+let bank=parseFloat(document.getElementById("bank").value);
+
+if(isNaN(p)||isNaN(r)||isNaN(c)){
+reset();
+return;
+}
 
 let ev=p*r-c;
 let roi=(ev/c)*100;
@@ -165,46 +221,32 @@ update("ev",ev);
 update("roi",roi.toFixed(2)+"%");
 update("be",be.toFixed(3));
 update("kelly",k.toFixed(2)+"%");
-update("half",(k/2).toFixed(2)+"%");
 
-if(ev>0 && roi>20) updateText("worth","Strong Positive","green");
+if(ev>0&&roi>20) updateText("worth","Strong Positive EV","green");
 else if(ev>0) updateText("worth","Slight Edge","yellow");
-else updateText("worth","Negative","red");
+else updateText("worth","Negative EV","red");
 
 if(ev>0) updateText("risk","Low","green");
 else updateText("risk","High","red");
-
-if(!isNaN(bank) && k>0){
-let stake=bank*(k/100);
-update("half",(stake/2).toFixed(2));
-}
 }
 
 function simulate(){
-let p=parseFloat(p.value);
-let r=parseFloat(r.value);
-let c=parseFloat(c.value);
+let p=parseFloat(document.getElementById("prob").value);
+let r=parseFloat(document.getElementById("reward").value);
+let c=parseFloat(document.getElementById("cost").value);
 
 if(isNaN(p)||isNaN(r)||isNaN(c)){
-alert("Please enter Probability, Reward and Cost.");
+alert("Please fill Probability, Reward and Cost.");
 return;
 }
 
 let capital=0;
-let peak=0;
-let maxDD=0;
-
 for(let i=0;i<100;i++){
 if(Math.random()<p) capital+=r-c;
 else capital-=c;
-
-if(capital>peak) peak=capital;
-let dd=peak-capital;
-if(dd>maxDD) maxDD=dd;
 }
 
 update("simProfit",capital);
-update("simDD",maxDD);
 }
 
 function update(id,val){
@@ -223,7 +265,7 @@ el.className="value "+color;
 }
 
 function reset(){
-["ev","roi","be","kelly","half","worth","risk"].forEach(id=>{
+["ev","roi","be","kelly","worth","risk","simProfit"].forEach(id=>{
 document.getElementById(id).innerText="-";
 document.getElementById(id).className="value gray";
 });
